--- a/ref/changelog.txt
+++ b/ref/changelog.txt
@@ -4,6 +4,16 @@ All notable changes to this API will be documented in this file.
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/)
 
+## LiveAPI 2.3 - Season 25.0 - 2025-05-06
+
+### Added
+
+- `ChangeCamera` requests can now take `nucleusHash` for `target` information. This should allow more consistent automation flows for spectators
+	
+### Changed
+
+- Updated documentation on the `CustomMatch_SetLegendBan` request. This should be a list of strings (not a comma-separated list) as specified by the protobuf file
+
 ## LiveAPI 2.3 - Season 24.1 - 2025-03-25
 
 ### Added
